--- a/index.html
+++ b/index.html
@@ -4,37 +4,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A-Frame Scene 
-    1
-  </title>
+  <title>A-Frame Scene 1</title>
 
   <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
 </head>
 
 <body>
+
   <a-scene>
-    <html>
+    <a-assets>
+      <a-asset-item id="mice" src="assets/Mice.glb"></a-asset-item>
+    </a-assets>
+    <a-entity gltf-model="#mice" position="-1 5 -5" scale="1 1 1"></a-entity>
 
-    <head>
-      <title>Ma première scène A-Frame</title>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
-    </head>
+        <a-assets>
+      <a-asset-item id="forest" src="assets/Forest.glb"></a-asset-item>
+    </a-assets>
+    <a-entity gltf-model="#forest" position="-1 0 -5" scale="1 1 1"></a-entity>
+    
 
-    <body>
-      <a-scene>
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-        <a-sky color="#ECECEC"></a-sky>
-        <a-camera> </a-camera>
-      </a-scene>
-    </body>
+    <a-entity light="type: directional; color: #FFF; intensity: 0.6" position="-0.5 1 1"></a-entity>
 
-    </html>
+    <!-- <a-box position="-1 0 -3" rotation="0 45 0" color="#4CC3D9"></a-box> -->
+    <!-- <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere> -->
+    <!-- <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder> -->
+    <a-plane position="0 0 -4" rotation="-90 0 0" width="20" height="20" color="#7BC8A4"></a-plane>
+    <a-sky color="#ECECEC"></a-sky>
+    <a-entity id="rig" position="0 0 0">
+      <a-camera position="0 1.6 0"></a-camera>
+    </a-entity>
   </a-scene>
+
 </body>
 
 </html>
