--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
     <a-entity light="color: #f78080; type: ambient" position="0 2.6 0"></a-entity>
     <a-entity light="color: #fff; decay: 16.3; intensity: 31.1; type: point" position="-1.5 3.42 -0.57"></a-entity>
-
+    <a-entity light="color: #fff; intensity: 5; type: point" position="-0.31 1.74 -0.57"></a-entity>
+    <a-entity light="color: #fff; intensity: 5; type: spot" position="-1.55 3.35 -0.57"
+      rotation="-16.920000000000005 -54.92 0"></a-entity>
 
     <a-plane position="0 0 -4" rotation="-90 0 0" width="20" height="20" color="#000"></a-plane>
     <a-sky color="#ECECEC"></a-sky>
