--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <a-scene fog="color: #ff0000; density: 0.300; far: 20; type: exponential" keyboard-shortcuts="" screenshot=""
+  <a-scene fog="color: #ff0000; density: 0.400; far: 20; type: exponential" keyboard-shortcuts="" screenshot=""
     xr-mode-ui="" device-orientation-permission-ui="">
 
 
@@ -36,41 +36,32 @@
     <a-entity gltf-model="assets/Big Tree.glb" position="-1.24 1.7 -0.17" rotation="-1.08 -10 0"
       scale="1.5 1.5 1.5"></a-entity> -->
 
-    <a-entity position="0 0 -4">
+    <a-entity position="0 0 -2">
 
       <!-- Lumiere ==================================== -->
       <a-entity light="color: #f78080; type: ambient" position="0 2.6 0"></a-entity>
       <a-entity light="color: #fff; decay: 16.3; intensity: 31.1; type: point" position="-1.5 3.42 -0.57"></a-entity>
       <a-entity light="color: #fff; intensity: 5; type: point" position="-0.31 1.74 -0.57"></a-entity>
-      <a-entity light="color: #0000ff; decay: 11.6; distance: 4.7; intensity: 57.7; type: point"
-        position="-0.1 1.17 -0.42"
-        animation="property: light.intensity; from: 1.5; to: 0; dir: alternate; dur: 150; loop: true;"></a-entity>
-      <a-entity light="color: #fff; intensity: 5; type: spot" position="-1.55 3.35 -0.57"
-        rotation="-16.920000000000005 -54.92 0"></a-entity>
+      <a-entity light="color: #0000ff; decay: 11.6; distance: 4.7; intensity: 0.7842133800245417; type: point" position="-0.1 1.17 -0.42" animation="dir: alternate; dur: 150; from: 1.5; loop: true; property: light.intensity; to: 0"></a-entity>
+      <a-entity light="color: #fff; intensity: 5; type: spot" position="-1.55 3.35 -0.57" rotation="-16.920000000000005 -54.92 0"></a-entity>
 
 
       <!-- Elements ==================================== -->
       <a-plane position="0 0 -4" rotation="-90 0 0" width="100" height="100" color="#000"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
 
-      <a-entity gltf-model="assets/Streetlight.glb" position="-1.56 -0.02 -0.55" rotation="-1.08 -169.32 0"
-        scale="3 3 3">
-        <a-sphere position="-0.2 0.895 0" radius="0.01" color="#fff"
-          material="color: #fffcc; emissive: #fff; emissiveIntensity: 2"
-          light="decay: 0; distance: 10.34; intensity: 20" geometry="radius: 0.015"
-          animation="property: light.intensity; from: 1.5; to: 0; dir: alternate; dur: 300; loop: true;">
+      <a-entity gltf-model="assets/Streetlight.glb" position="-1.56 -0.02 -0.55" rotation="-1.08 -169.32 0" scale="3 3 3">
+        <a-sphere position="-0.2 0.895 0" radius="0.01" color="#fff" material="color: #fffcc; emissive: #fff; emissiveIntensity: 2" light="decay: 0; distance: 10.34; intensity: 1.0273776930790033" geometry="radius: 0.015" animation="dir: alternate; dur: 300; from: 1.5; loop: true; property: light.intensity; to: 0">
         </a-sphere>
       </a-entity>
 
 
       <a-entity gltf-model="assets/Streetlight.glb" position="-3.6 -0.02 0.41" rotation="-1.08 -47.3 0" scale="3 3 3">
-        <a-entity light="angle: -83.27; color: #fff; intensity: 100; type: spot" rotation="-16.920000000000005 -54.92 0"
-          position="-0.20271 0.8889 -0.00612"></a-entity>
+        <a-entity light="angle: -83.27; color: #fff; intensity: 100; type: spot" rotation="-16.920000000000005 -54.92 0" position="-0.20271 0.8889 -0.00612"></a-entity>
       </a-entity>
 
       <a-entity gltf-model="assets/Streetlight.glb" position="-2.08 -0.02 1.83" rotation="-1.08 -90.3 0" scale="3 3 3">
-        <a-entity light="angle: -83.27; color: #fff; intensity: 100; type: spot" rotation="-16.920000000000005 -54.92 0"
-          position="-0.2 0.8889 0"></a-entity>
+        <a-entity light="angle: -83.27; color: #fff; intensity: 100; type: spot" rotation="-16.920000000000005 -54.92 0" position="-0.2 0.8889 0"></a-entity>
       </a-entity>
 
 
@@ -85,8 +76,7 @@
 
 
       <!-- Arcade ================================== -->
-      <a-entity gltf-model="assets/Arcade Machine.glb" position="0.04 0.82 -0.55" rotation="-1.08 -47.3 0"
-        scale="0.9 0.9 0.9">
+      <a-entity gltf-model="assets/Arcade Machine.glb" position="0.04 0.82 -0.55" rotation="-1.08 -47.3 0" scale="0.9 0.9 0.9">
       </a-entity>
       <a-entity light="color: #fff; intensity: 5; type: point" position="0.04 1.74 -0.55"></a-entity>
 
@@ -94,8 +84,7 @@
 
 
       <a-entity id="rig" rotation="0.34377467707849396 -192.74592 -4">
-        <a-camera position="0.7881176178936234 1.6 2.0598895905631127"
-          rotation="-9.740282517224 -0.572957795130762 0"></a-camera>
+        <a-camera position="0.7881176178936234 1.6 2.0598895905631127"></a-camera>
       </a-entity>
 
     </a-entity>
